main scope major/critical issues